--- a/src/index.scss
+++ b/src/index.scss
@@ -51,7 +51,7 @@ body {
   display: block;
   width: 24px;
   height: 24px;
-  background-image: url("/assets/portal/logo.svg");
+  background-image: url("/logo.svg");
   background-size: contain;
   background-repeat: no-repeat;
   border-radius: 50%;
